<resources>
    <string name="app_name">Capstone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Analyze</string>
    <string name="title_notifications">Tips-Tips</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_profile">Profile</string>
    <string name="click_me_button">Click Me</string>
    <string name="fragment_profile">This is profile fragment</string>
    <string name="welcome_text">Selamat Datang</string>
    <string name="welcome_desc1">Kami berkomitmen untuk membantu Anda memberikan nutrisi yang optimal bagi balita dan ibu hamil.</string>
    <string name="welcome_desc2">Jelajahi konten dan temukan informasi terkini tentang gizi, resep sehat, dan tips untuk balita dan ibu hamil.</string>
    <string name="welcome_desc3">Gunakan fitur kami untuk memantau kebutuhan gizi balita dan ibu hamil secara berkala.</string>
    <string name="welcome_desc4">Aplikasi kami menyediakan konten yang interaktif dan edukatif. Mari jelajahi bersama!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Mulai</string>
    <string name="register">Daftar</string>
    <string name="email">youremail@example.com</string>
    <string name="password">Password</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="age">Usia</string>
    <string name="circleHand">Lingkar Lengan</string>
    <string name="body_height">Tinggi Badan</string>
    <string name="body_weight">Berat Badan</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="register_text">Daftarkan diri anda</string>
    <string name="login_text">Selamat Datang Kembali</string>
    <string name="login_desc">Pantau Makanan Anda untuk Keseimbangan Gizi Anda</string>
    <string name="register_text_data">Lengkapi data diri anda</string>
    <string name="analyze_desc">Ambil foto menggunakan kamera Anda atau dapat memilihnya melalui Gallery</string>
    <string name="have_account">Sudah Memiliki Akun?</string>
    <string name="dont_have_account">Belum Memiliki Akun?</string>
    <string name="text_button_to_sign_in">Masuk</string>
    <string name="centimeter">CM</string>
    <string name="kilogram">KG</string>
    <string name="save">Simpan</string>
    <string name="required">Perlu Diisi*</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="tips_title">Tips - tips</string>
    <string name="analyze">Analisis</string>
    <string name="description">Deskripsi singkat</string>
    <string name="username">Nama Lengkap Perngguna</string>
    <string name="usia">Usia</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="lingkar_lengan">Lingkar Lengan</string>
    <string name="label">Label</string>
    <string name="fill">fill</string>
    <string name="edit">Edit</string>
    <string name="logout">logout</string>
    <string name="result">Hasil</string>
    <string name="result_generate">Nama Makanan</string>
    <string name="nutrition">Nutrisi</string>
    <string name="nutrition_generate">Kalori: 0 kkal</string>
    <string name="nutrition_generate_protein">Protein: 0 gram</string>
    <string name="nutrition_generate_fat">Fat: 0 gram</string>
    <string name="score">Confidence Score</string>
    <string name="score_generate">0%</string>
    <string name="eat_progress">Progress Makan</string>
    <string name="calories">150/300</string>
    <string name="desc_calories">kkal</string>
    <string name="kalori">Kalori</string>
    <string name="eat_progress_background">Lengkapi Makan Anda untuk memenuhi kebutuhan gizi Anda</string>
    <string name="history">Riwayat</string>
    <string name="history_background">Ayo pindai makanan anda!</string>
    <string name="history_title">Nama Makanan</string>
    <string name="description_history">Spesifikasi Nutrisinya</string>
    <string name="login_failed">Login Gagal</string>
    <string name="login_failed_data">Login Gagal, Masukkan data dengan benar!</string>
    <string name="update_gagal">Update Gagal</string>
    <string name="update_gagal_empty">Update Gagal, Masukkan data dengan benar!</string>
    <string name="register_gagal">Registrasi Gagal</string>
    <string name="register_gagal_1">Registrasi Gagal, Masukkan data dengan benar!</string>
    <string name="register_gagal_2">Password yang anda masukkan tidak sama!</string>
    <string name="password_too_short">Password yang anda kurang dari 8 karakter!</string>
    <string name="error">Error</string>
    <string name="kosong"> </string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="recomend">DIREKOMENDASIKAN</string>
    <string name="error_null_data">NULL</string>
    <string name="update_profile">Edit Data Diri</string>

</resources>