<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_image_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_place_holder"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@id/iv_image_user"
        android:layout_centerHorizontal="true"
        style="@style/textBold"
        android:textSize="16sp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        style="@style/textLight"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_marginTop="24dp"
        tools:listitem="@layout/item_data"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/rv_data"
        android:layout_marginTop="24dp"
        android:text="@string/edit"
        style="@style/textButton"
        android:background="@drawable/button_primary"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/btn_edit"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_secondary"
        android:text="@string/logout"
        style="@style/textButton"
        android:textColor="@color/primary"
        android:stateListAnimator="@null"
        android:elevation="0dp"
        android:translationZ="0dp"/>

</RelativeLayout>
